fix(index): reorder markup and adjust overflow for scling imgs

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -96,9 +96,11 @@ h3 {
   text-align: center;
   margin-bottom: 40px;
   transition: transform 0.3s ease;
+  overflow: hidden;
 }
 
 .portfolio-tile img {
+  display: block;
   width: 100%;
   height: auto;
   max-width: 100%;
@@ -106,7 +108,7 @@ h3 {
 }
 
 .portfolio-tile:hover img {
-  transform: scale(1.01);
+  transform: scale(1.02);
   transition: transform 0.3s ease;
 }
 
